[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 113.0
margin_top = 100.0
margin_right = 300.0
margin_bottom = 131.0
rect_scale = Vector2( 2, 2 )
text = "3D Spaceship Arcade Shooter
(Working Title)"
align = 1

[node name="VersionLabel" type="Label" parent="."]
margin_left = 466.0
margin_top = 579.0
margin_right = 587.0
margin_bottom = 593.0
text = "preproduction v0.1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="."]
margin_left = 217.0
margin_top = 204.0
margin_right = 300.0
margin_bottom = 224.0
rect_scale = Vector2( 2, 2 )
text = "Start Game"

[node name="InstructionsButton" type="Button" parent="."]
margin_left = 211.0
margin_top = 270.0
margin_right = 300.0
margin_bottom = 290.0
rect_scale = Vector2( 2, 2 )
text = "Instructions"

[node name="Instructions" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="InstructionText" type="Label" parent="Instructions"]
margin_left = 67.0
margin_top = 60.0
margin_right = 310.0
margin_bottom = 278.0
rect_scale = Vector2( 2, 2 )
text = "Hey there! Thanks for trying out 
this little 3D prototype.

This game is meant to be reminiscent
of the old arcade games. Just started
on 10/31/20, but wanted to post an
update before the work week
started up again.

Controls:
Movement - Arrow keys
Fire Weapon - \"Z\" key
Return to Menu - Tab key"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Instructions"]
margin_left = 201.0
margin_top = 530.0
margin_right = 300.0
margin_bottom = 550.0
rect_scale = Vector2( 2, 2 )
text = "Back to Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="Instructions/BackButton" to="." method="_on_BackButton_pressed"]
